# python-devcontainer

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mega-linter.yaml  test-python.yml
src/: hello_world.ipynb  hello_world.py
test/: test_hello_world.py
